2005-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/program-option.cc (LY_DEFINE): remove Protected_scm global variable.
	(LY_DEFINE): oops. don't forget protection.

	* flower/parse-afm.cc (Module): strip AFM handling completely.

	* lily/stencil-expression.cc: idem.

	* lily/grob-interface-scheme.cc (LY_DEFINE): idem.

	* lily/function-documentation.cc (ly_add_function_documentation):
	use static member iso. Protected_scm

	* lily/main.cc: use ifdef ARGV0_RELOCATION iso. MINGW

	* config.make.in (prefix): remove HAVE_KPATHSEA_SO

2005-12-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (set_env_dir): New function.
	(set_relocation): Use it to fix setting PANGO_PREFIX.

2005-12-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/stem-direction-context.ly: remove rest.

	* lily/melody-engraver.cc (process_music): restart for bar lines.
	(acknowledge_slur): restart for slurs.

2005-12-27  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/invoking.itely: describe how to view SVG 
	output using Inkscape which replace embedded fonts with OTF fonts.

2005-12-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/relocate.cc (set_relocation): set PANGO_PREFIX

2005-12-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/melody-engraver.cc (class Melody_engraver): Remove lying
	comment.

2005-12-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.7.25

	* Documentation/topdocs/NEWS.tely (Top): document new feature.

	* input/regression/stem-direction-context.ly: new file.

	* lily/relocate.cc (set_relocation): add PANGO_PREFIX

	* lily/melody-engraver.cc (acknowledge_stem): restart MelodyItem
	on rest.

	* ly/engraver-init.ly: add Melody_engraver

	* lily/beam.cc (calc_direction): use default-direction
	iso. get_default_direction()

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	default-direction property.

	* scm/define-grobs.scm (all-grob-descriptions): add MelodyItem.
